Fix layout bugs

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -252,7 +252,7 @@ input {
   list-style: none;
   padding: 0;
   li {
-    padding: 10px;
+    padding: 10px 0;
     border-top: 1px solid #e8e8e8;
   }
   .user {
